add settleAPI